--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,12 +1,3 @@
-/*
- * Bootstrap v2.2.1
- *
- * Copyright 2012 Twitter, Inc
- * Licensed under the Apache License v2.0
- * http://www.apache.org/licenses/LICENSE-2.0
- *
- * Designed and built with all the love in the world @twitter by @mdo and @fat.
- */
 /* line 19, ../sass/_reset.scss */
 article,
 aside,
@@ -7929,7 +7920,7 @@ a.label:hover, a.badge:hover {
  * Contributing author: Tyler Smith (@mbmufffin)
  */
 /* Browser Resets */
-/* line 121, ../sass/bootstrap.scss */
+/* line 114, ../sass/bootstrap.scss */
 .flex-container a:active,
 .flexslider a:active,
 .flex-container a:focus,
@@ -7937,7 +7928,7 @@ a.label:hover, a.badge:hover {
   outline: none;
 }
 
-/* line 122, ../sass/bootstrap.scss */
+/* line 115, ../sass/bootstrap.scss */
 .slides, .flex-control-nav, .flex-direction-nav {
   margin: 0;
   padding: 0;
@@ -7946,31 +7937,31 @@ a.label:hover, a.badge:hover {
 
 /* FlexSlider Necessary Styles
 *********************************/
-/* line 126, ../sass/bootstrap.scss */
+/* line 119, ../sass/bootstrap.scss */
 .flexslider {
   padding: 0;
 }
 
-/* line 131, ../sass/bootstrap.scss */
+/* line 124, ../sass/bootstrap.scss */
 .flexslider .slides > li {
   display: none;
   -webkit-backface-visibility: hidden;
 }
 
 /* Hide the slides before the JS is loaded. Avoids image jumping */
-/* line 132, ../sass/bootstrap.scss */
+/* line 125, ../sass/bootstrap.scss */
 .flexslider .slides img {
   width: 100%;
   display: block;
 }
 
-/* line 133, ../sass/bootstrap.scss */
+/* line 126, ../sass/bootstrap.scss */
 .flex-pauseplay span {
   text-transform: capitalize;
 }
 
 /* Clearfix for the .slides element */
-/* line 136, ../sass/bootstrap.scss */
+/* line 129, ../sass/bootstrap.scss */
 .slides:after {
   content: ".";
   display: block;
@@ -7980,12 +7971,12 @@ a.label:hover, a.badge:hover {
   height: 0;
 }
 
-/* line 137, ../sass/bootstrap.scss */
+/* line 130, ../sass/bootstrap.scss */
 html[xmlns] .slides {
   display: block;
 }
 
-/* line 138, ../sass/bootstrap.scss */
+/* line 131, ../sass/bootstrap.scss */
 * html .slides {
   height: 1%;
 }
@@ -7993,20 +7984,20 @@ html[xmlns] .slides {
 /* No JavaScript Fallback */
 /* If you are not using another script, such as Modernizr, make sure you
  * include js that eliminates this class on page load */
-/* line 143, ../sass/bootstrap.scss */
+/* line 136, ../sass/bootstrap.scss */
 .no-js .slides > li:first-child {
   display: block;
 }
 
 /* FlexSlider Default Theme
 *********************************/
-/* line 148, ../sass/bootstrap.scss */
+/* line 141, ../sass/bootstrap.scss */
 .flexslider {
   background: #fff;
   position: relative;
 }
 
-/* line 157, ../sass/bootstrap.scss */
+/* line 150, ../sass/bootstrap.scss */
 .flex-viewport {
   max-height: 2000px;
   -webkit-transition: all 1s ease;
@@ -8014,28 +8005,28 @@ html[xmlns] .slides {
   transition: all 1s ease;
 }
 
-/* line 158, ../sass/bootstrap.scss */
+/* line 151, ../sass/bootstrap.scss */
 .loading .flex-viewport {
   max-height: 300px;
 }
 
-/* line 159, ../sass/bootstrap.scss */
+/* line 152, ../sass/bootstrap.scss */
 .flexslider .slides {
   zoom: 1;
 }
 
-/* line 161, ../sass/bootstrap.scss */
+/* line 154, ../sass/bootstrap.scss */
 .carousel li {
   margin-right: 5px;
 }
 
 /* Direction Nav */
-/* line 165, ../sass/bootstrap.scss */
+/* line 158, ../sass/bootstrap.scss */
 .flex-direction-nav {
   *height: 0;
 }
 
-/* line 166, ../sass/bootstrap.scss */
+/* line 159, ../sass/bootstrap.scss */
 .flex-direction-nav a {
   width: 30px;
   height: 30px;
@@ -8050,35 +8041,35 @@ html[xmlns] .slides {
   -webkit-transition: all .3s ease;
 }
 
-/* line 167, ../sass/bootstrap.scss */
+/* line 160, ../sass/bootstrap.scss */
 .flex-direction-nav .flex-next {
   background-position: 100% 0;
   right: -36px;
 }
 
-/* line 168, ../sass/bootstrap.scss */
+/* line 161, ../sass/bootstrap.scss */
 .flex-direction-nav .flex-prev {
   left: -36px;
 }
 
-/* line 169, ../sass/bootstrap.scss */
+/* line 162, ../sass/bootstrap.scss */
 .flexslider:hover .flex-next {
   opacity: 0.8;
   right: 5px;
 }
 
-/* line 170, ../sass/bootstrap.scss */
+/* line 163, ../sass/bootstrap.scss */
 .flexslider:hover .flex-prev {
   opacity: 0.8;
   left: 5px;
 }
 
-/* line 171, ../sass/bootstrap.scss */
+/* line 164, ../sass/bootstrap.scss */
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover {
   opacity: 1;
 }
 
-/* line 172, ../sass/bootstrap.scss */
+/* line 165, ../sass/bootstrap.scss */
 .flex-direction-nav .flex-disabled {
   opacity: .3!important;
   filter: alpha(opacity=30);
@@ -8086,14 +8077,14 @@ html[xmlns] .slides {
 }
 
 /* Control Nav */
-/* line 175, ../sass/bootstrap.scss */
+/* line 168, ../sass/bootstrap.scss */
 .flex-control-nav {
   width: 100%;
   margin-top: .5em;
   text-align: center;
 }
 
-/* line 183, ../sass/bootstrap.scss */
+/* line 176, ../sass/bootstrap.scss */
 .flex-control-nav li {
   margin: 0 6px;
   display: inline-block;
@@ -8101,7 +8092,7 @@ html[xmlns] .slides {
   *display: inline;
 }
 
-/* line 184, ../sass/bootstrap.scss */
+/* line 177, ../sass/bootstrap.scss */
 .flex-control-paging li a {
   width: 11px;
   height: 11px;
@@ -8117,34 +8108,34 @@ html[xmlns] .slides {
   box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.3);
 }
 
-/* line 185, ../sass/bootstrap.scss */
+/* line 178, ../sass/bootstrap.scss */
 .flex-control-paging li a:hover {
   background: #333;
   background: rgba(0, 0, 0, 0.7);
 }
 
-/* line 186, ../sass/bootstrap.scss */
+/* line 179, ../sass/bootstrap.scss */
 .flex-control-paging li a.flex-active {
   background: #000;
   background: rgba(0, 0, 0, 0.9);
   cursor: default;
 }
 
-/* line 188, ../sass/bootstrap.scss */
+/* line 181, ../sass/bootstrap.scss */
 .flex-control-thumbs {
   margin: 5px 0 0;
   position: static;
   overflow: hidden;
 }
 
-/* line 189, ../sass/bootstrap.scss */
+/* line 182, ../sass/bootstrap.scss */
 .flex-control-thumbs li {
   width: 25%;
   float: left;
   margin: 0;
 }
 
-/* line 190, ../sass/bootstrap.scss */
+/* line 183, ../sass/bootstrap.scss */
 .flex-control-thumbs img {
   width: 100%;
   display: block;
@@ -8152,78 +8143,78 @@ html[xmlns] .slides {
   cursor: pointer;
 }
 
-/* line 191, ../sass/bootstrap.scss */
+/* line 184, ../sass/bootstrap.scss */
 .flex-control-thumbs img:hover {
   opacity: 1;
 }
 
-/* line 192, ../sass/bootstrap.scss */
+/* line 185, ../sass/bootstrap.scss */
 .flex-control-thumbs .flex-active {
   opacity: 1;
   cursor: default;
 }
 
 @media screen and (max-width: 860px) {
-  /* line 195, ../sass/bootstrap.scss */
+  /* line 188, ../sass/bootstrap.scss */
   .flex-direction-nav .flex-prev {
     opacity: 1;
     left: 0;
   }
 
-  /* line 196, ../sass/bootstrap.scss */
+  /* line 189, ../sass/bootstrap.scss */
   .flex-direction-nav .flex-next {
     opacity: 1;
     right: 0;
   }
 }
 /*mc --------------------------------*/
-/* line 203, ../sass/bootstrap.scss */
+/* line 196, ../sass/bootstrap.scss */
 .slides li p {
   text-align: left;
   margin: .5em auto 0;
   padding: .5em .5em .5em .5em;
 }
 
-/* line 219, ../sass/bootstrap.scss */
+/* line 212, ../sass/bootstrap.scss */
 .page-services .slides li p {
   font-weight: normal;
   text-align: left;
 }
-/* line 225, ../sass/bootstrap.scss */
+/* line 218, ../sass/bootstrap.scss */
 .page-services .slides li .flex-control-nav, .page-services .slides li .flex-direction-nav {
   display: none;
 }
 
-/* line 235, ../sass/bootstrap.scss */
+/* line 228, ../sass/bootstrap.scss */
 .slides li p a {
   color: #000;
 }
 
-/* line 239, ../sass/bootstrap.scss */
+/* line 232, ../sass/bootstrap.scss */
 ul.the-icons {
   float: right;
 }
 
-/* line 243, ../sass/bootstrap.scss */
+/* line 236, ../sass/bootstrap.scss */
 ul.the-icons li {
   float: left;
   margin: .5em 1em 0 0;
 }
 
-/* line 248, ../sass/bootstrap.scss */
+/* line 241, ../sass/bootstrap.scss */
 .page-web .flex-control-paging li a.flex-active {
   background: #90969a;
   color: white;
 }
 
-/* line 252, ../sass/bootstrap.scss */
+/* line 245, ../sass/bootstrap.scss */
 .page-web .flex-control-paging li a:hover {
   background: #ff3c1e;
   text-decoration: none;
   color: white;
 }
 
-/* line 257, ../sass/bootstrap.scss */
+/* line 250, ../sass/bootstrap.scss */
 .page-web .flex-control-paging li a {
   display: block;
   width: 100%;
@@ -8238,14 +8229,14 @@ ul.the-icons li {
 
 /* Sticky footer styles
       -------------------------------------------------- */
-/* line 274, ../sass/bootstrap.scss */
+/* line 267, ../sass/bootstrap.scss */
 html, body {
   height: 100%;
   /* The html and body elements cannot have any padding or margin. */
 }
 
 /* Wrapper for page content to push down footer */
-/* line 280, ../sass/bootstrap.scss */
+/* line 273, ../sass/bootstrap.scss */
 #wrap {
   min-height: 100%;
   height: auto !important;
@@ -8255,23 +8246,29 @@ html, body {
 }
 
 /* Set the fixed height of the footer here */
-/* line 290, ../sass/bootstrap.scss */
+/* line 283, ../sass/bootstrap.scss */
 #push, #footer {
   height: 60px;
 }
 
-/* line 293, ../sass/bootstrap.scss */
+/* line 286, ../sass/bootstrap.scss */
 #footer {
   background-color: #f5f5f5;
 }
 
 /* Lastly, apply responsive CSS fixes as necessary */
 @media (max-width: 767px) {
-  /* line 299, ../sass/bootstrap.scss */
+  /* line 292, ../sass/bootstrap.scss */
   #footer {
     margin-left: -20px;
     margin-right: -20px;
     padding-left: 20px;
     padding-right: 20px;
   }
+}
+/* line 300, ../sass/bootstrap.scss */
+#map_canvas {
+  height: 400px;
+  width: 400px;
+  border: solid 1px #ccc;
 }
